# llm-token-monitor

./: .gitignore  README.md  package-lock.json  package.json
.claude/: CLAUDE.md
src/: app.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: core.rs  lib.rs  main.rs
